samples/_failures_safe/1761319569_28c085_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fea85f53.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_fea85f53.c:172:43: error: missing terminating " character
  172 |             case TOKEN_IDENTIFIER: printf("
      |                                           ^
./samples/SAFE/__tmp_fea85f53.c:172:13: error: expected expression at end of input
  172 |             case TOKEN_IDENTIFIER: printf("
      |             ^~~~
./samples/SAFE/__tmp_fea85f53.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fea85f53.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fea85f53.c:172:13: error: expected declaration or statement at end of input
